# marge-hindi

./: README.md  pyproject.toml
hindi_marge/: .gitignore  requirements.txt
hindi_marge/src/config/: config_meta.yml  config_model_bert_qa.yml
hindi_marge/src/scripts/: Ashi-ROUGE-1.5.5.pl  Ashi-rouge_hindi  dump_sentence_rouge_mp.py  hindi_stemmer.py  mask_summary_rand_ablation.py  mask_summary_with_ratio.py  rouge_hindi.py
hindi_marge/src/utils/: config_loader.py
