[tool.poetry]
name = "hindi_marge"
version = "0.1.0"
description = ""
authors = ["agupta-svg <guptaashi26498@gmail.com>"]
readme = "README.md"
packages = [{include = "hindi_marge"}]

[tool.poetry.dependencies]
python = "==3.9.16"
alabaster = "^0.7.13"
allennlp = "^2.10.1"
attrs = "^23.1.0"
babel = "^2.12.1"
blis = "0.7.9"
boto = "^2.49.0"
boto3 = "^1.26.117"
botocore = "^1.29.117"
certifi = "^2022.12.7"
chardet = "^5.1.0"
click = "^8.1.3"
conllu = "^4.5.2"
cycler = "^0.11.0"
cymem = "^2.0.7"
dill = "^0.3.6"
docutils = "^0.19"
editdistance = "^0.6.2"
flaky = "^3.7.0"
flask = "^2.2.3"
flask-cors = "^3.0.10"
ftfy = "^6.1.1"
gensim = "^4.3.1"
gevent = "^22.10.2"
greenlet = "^2.0.2"
h5py = "^3.8.0"
idna = "^3.4"
imagesize = "^1.4.1"
importlib-metadata = "^6.5.0"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.2"
jmespath = "^1.0.1"
joblib = "^1.2.0"
jsonnet = "^0.20.0"
jsonpickle = "^3.0.1"
kiwisolver = "^1.4.4"
markupsafe = "^2.1.2"
matplotlib = "^3.7.1"
more-itertools = "^9.1.0"
murmurhash = "^1.0.9"
nltk = "^3.8.1"
numpy = "^1.24.2"
numpydoc = "^1.5.0"
overrides = "^7.3.1"
packaging = "^23.1"
pandas = "^2.0.0"
parsimonious = "^0.10.0"
plac = "^1.3.5"
pluggy = "^1.0.0"
preshed = "^3.0.8"
protobuf = "3.20.3"
py = "^1.11.0"
pygments = "^2.15.1"
pyparsing = "^3.0.9"
pytest = "^7.3.1"
python-dateutil = "^2.8.2"
pytorch-pretrained-bert = "^0.6.2"
pytorch-transformers = "^1.2.0"
pytz = "^2023.3"
pyyaml = "^6.0"
regex = "^2023.3.23"
requests = "^2.28.2"
responses = "^0.23.1"
s3transfer = "^0.6.0"
scikit-learn = "^1.2.2"
scipy = "^1.10.1"
seaborn = "^0.12.2"
sentencepiece = "^0.1.98"
six = "^1.16.0"
smart-open = "^6.3.0"
snowballstemmer = "^2.2.0"
spacy = "3.3.2"
sphinx = "^6.1.3"
sphinxcontrib-applehelp = "^1.0.4"
sphinxcontrib-devhelp = "^1.0.2"
sphinxcontrib-htmlhelp = "^2.0.1"
sphinxcontrib-jsmath = "^1.0.1"
sphinxcontrib-qthelp = "^1.0.3"
sphinxcontrib-serializinghtml = "^1.1.5"
sqlparse = "^0.4.4"
srsly = "^2.4.6"
tensorboardx = "^2.6"
thinc = "8.0.17"
torch = "1.12.0"
tqdm = "^4.65.0"
unidecode = "^1.3.6"
urllib3 = "^1.26.15"
wasabi = "0.10.1"
wcwidth = "^0.2.6"
werkzeug = "^2.2.3"
word2number = "^1.1"
zipp = "^3.15.0"
indic-nlp-library = "^0.91"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
